@@ -4,7 +4,7 @@ use warnings;
 
 our $VERSION = '0.002002';
 
-use DBI::Profile;
+use DBI::Profile qw/dbi_profile_merge_nodes/;
 use Test2::API qw/test2_add_callback_exit/;
 
 my $ADDED_HOOK = 0;
@@ -36,11 +36,21 @@ sub send_profile_event {
     my $data = $p->{Data};
     my ($summary) = $p->format;
 
+    my @totals;
+    use Data::Dumper;
+    dbi_profile_merge_nodes(\@totals, $data);
+    my ($count, $time) = @totals;
+
     $ctx->send_ev2(
         dbi_profile => $data,
 
         about => {package => __PACKAGE__, details => $summary},
-        info  => [{tag => 'DBI-PROF', details => $summary,}],
+        info  => [{tag => 'DBI-PROF', details => $summary}],
+
+        harness_job_fields => [
+            {name => "dbi_time",  details => $time},
+            {name => "dbi_calls", details => $count},
+        ],
     );
 }
 
