@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add harness_job_fields to event
+
 0.002001  2019-08-16 19:47:06-07:00 America/Los_Angeles
 
     - Initial Import
